feat: add "coming soon" animation and update button functionality

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <button class="btnnav" onclick="returnhome()">Home</button>
                 <button class="btnnav" onclick="packrealistefivem()">Pack Réaliste</button> 
                 <button class="btnnav" onclick="packgunfightfivem()">Pack GunFight</button>
-                <button class="btnnav">Pack Son</button> 
+                <button class="btnnav" onclick="packsonfivem()">Pack Son</button> 
                 <button class="btnnav" onclick="modsfivem()">Mods Fivem</button>
             </ul>
             <button class="btnexit" onclick="returnhome()">Exit</button>
@@ -219,11 +219,15 @@
                 <!-- <img src="img/modsfivem.png" alt=""> -->
             </div>
 
-            <div id="packfsonid" class="packfson">
+            <div id="packfsonid" class="packfson" onclick="packsonfivem()">
                 <!-- <img src="img/Packson.png" alt=""> -->
             </div>
         </div>
 
+    </div>
+
+    <div class="commingsoonimg" id="commingsoonid">
+        <img class="comingsoonimg" src="img/commingsoon.png" alt="">
     </div>
 
     <div id="console"></div>
@@ -247,13 +251,15 @@
             pywebview.api.clear_mods();  // Appel à la fonction Python pour supprimer les mods
         }
 
-        window.onload = function() {
+        window.onload = function() 
+        {
             var homediv = document.getElementById("divpackid");
             var packreadiv = document.getElementById("packrealistefivemid");
             var navbar = document.getElementById("navbar");
             var packgf = document.getElementById("packgunfightfivemid");
             var srcdiscordjoinid = document.getElementById("srcdiscordjoinid");
             var btnexitid = document.getElementById("btnexitid");
+            var commingsoonid = document.getElementById("commingsoonid");
 
             if (Math.random() < 0) {
                 packreadiv.style.setProperty("display", "block");
@@ -287,6 +293,11 @@
             } else {
                 btnexitid.style.setProperty("display", "none", "important");
             }
+            if (Math.random() < 0) {
+                commingsoonid.style.setProperty("display", "block", "important");
+            } else {
+                commingsoonid.style.setProperty("display", "none", "important");
+            }
         };
 
         function widgetdiscord()
@@ -309,11 +320,13 @@
             var homeid = document.getElementById("homeid");
             var console = document.getElementById("console");
             var btnexitid = document.getElementById("btnexitid");
+            var commingsoonid = document.getElementById("commingsoonid");
 
             srcdiscordjoinid.style.display = "none";
             homeid.style.display = "block";
             console.style.display = "block";
             btnexitid.style.display = "none";
+            commingsoonid.style.display = "none";
         }
 
         function packFivem() 
@@ -330,10 +343,12 @@
                 titlehome.style.display = "none";
                 creditid.style.display = "none";
                 divpack.style.display = "block";
+
             })
         }
 
-        function returnhome() {
+        function returnhome() 
+        {
             var homediv = document.getElementById("homeid");
             var consolediv = document.getElementById("console");
             var titlehome = document.getElementById("titlehome");
@@ -341,7 +356,8 @@
             var divpack = document.getElementById("divpackid");
             var packreadiv = document.getElementById("packrealistefivemid");
             var packgf = document.getElementById("packgunfightfivemid");
-            navbar = document.getElementById("navbar");
+            var navbar = document.getElementById("navbar");
+            var commingsoonid = document.getElementById("commingsoonid");
 
             homediv.style.display = "block";
             consolediv.style.display = "block";
@@ -349,6 +365,7 @@
             creditid.style.display = "block";
             divpack.style.display = "none";
             navbar.style.display = "none";
+            commingsoonid.style.display = "none";
 
             // Utilisation de style.display pour contourner le !important
             packreadiv.style.setProperty("display", "none", "important");
@@ -363,11 +380,13 @@
             var packgf = document.getElementById("packgunfightfivemid");
             var homeid = document.getElementById("homeid")
             var navbar = document.getElementById("navbar");
+            var commingsoonid = document.getElementById("commingsoonid");
 
             packreadiv.style.display = "block";
             divpack.style.display = "none";
             homeid.style.display = "none"
             navbar.style.display = "block";
+            commingsoonid.style.display = "none";
 
             packreadiv.style.setProperty("display", "flex", "important");
             packgf.style.setProperty("display", "none", "important");
@@ -380,32 +399,55 @@
             var packgf = document.getElementById("packgunfightfivemid");
             var homeid = document.getElementById("homeid")
             var navbar = document.getElementById("navbar");
+            var commingsoonid = document.getElementById("commingsoonid");
 
             packreadiv.style.setProperty("display", "none", "important");
             packgf.style.setProperty("display", "flex", "important");
             divpack.style.display = "none";
             homeid.style.display = "none"
             navbar.style.display = "block";
+            commingsoonid.style.display = "none";
         }
 
-        function executeOption(option) {
-            window.pywebview.api.runOption(option)
-                .then(response => updateConsole(response))
-                .catch(err => updateConsole("Erreur : " + err));
-        }
-
-        function modsfivem(){
+        function modsfivem()
+        {
             var divpack = document.getElementById("divpackid");
             var packreadiv = document.getElementById("packrealistefivemid");
             var packgf = document.getElementById("packgunfightfivemid");
             var homeid = document.getElementById("homeid")
             var navbar = document.getElementById("navbar");
+            var commingsoonid = document.getElementById("commingsoonid");
 
             packreadiv.style.setProperty("display", "none", "important");
             packgf.style.setProperty("display", "none", "important");
             divpack.style.display = "none";
             homeid.style.display = "none"
             navbar.style.display = "block";
+            commingsoonid.style.display = "block";
+        }
+
+        function packsonfivem()
+        {
+            var divpack = document.getElementById("divpackid");
+            var packreadiv = document.getElementById("packrealistefivemid");
+            var packgf = document.getElementById("packgunfightfivemid");
+            var homeid = document.getElementById("homeid")
+            var navbar = document.getElementById("navbar");
+            var commingsoonid = document.getElementById("commingsoonid");
+
+            packreadiv.style.setProperty("display", "none", "important");
+            packgf.style.setProperty("display", "none", "important");
+            divpack.style.display = "none";
+            homeid.style.display = "none"
+            navbar.style.display = "block";
+            commingsoonid.style.display = "block";
+        }
+
+        function executeOption(option) 
+        {
+            window.pywebview.api.runOption(option)
+                .then(response => updateConsole(response))
+                .catch(err => updateConsole("Erreur : " + err));
         }
 
     </script>
