feat: implement spoofer365 functionality and update HTML structure

--- a/interface.html
+++ b/interface.html
@@ -174,7 +174,7 @@
         <button class="btn" onclick="clearMods()">Clear Mods</button>
         <button class="btn" id="btnfivemcag" onclick="packFivem()">Pack Fivem</button> <p>
         <button class="btn" onclick="widgetdiscord()">Discord</button>
-        <button class="btn" onclick="actionBtn5()">Soon</button>
+        <button class="btn" onclick="spooferfivem()">Spoofer Fivem</button>
     </div>
 
     <div>
@@ -282,6 +282,11 @@
     <div class="credit" id="creditid">
         <p>©Lafraude 2025</p>
     </div>
+
+    <div class="spoofer" id="spooferid">
+        <button id="btn" onclick="spooferdeclenchement()">Spoofer</button>
+    </div>
+
     <script>
 
         setTimeout(() => {
@@ -319,6 +324,11 @@
             pywebview.api.clear_mods();  // Appel à la fonction Python 
         }
 
+        function spooferdeclenchement()
+        {
+            pywebview.api.spoofer_declenchement();  // Appel à la fonction Python 
+        }
+
         window.onload = function() 
         {
             var homediv = document.getElementById("divpackid");
@@ -333,6 +343,7 @@
             var creditid = document.getElementById("creditid");
             var titlehome = document.getElementById("titlehome");
             var console = document.getElementById("console");
+            var spooferid = document.getElementById("spooferid");
 
             if (Math.random() < 0) {
                 packreadiv.style.setProperty("display", "block");
@@ -395,6 +406,11 @@
                 console.style.setProperty("display", "block", "important");
             } else {
                 console.style.setProperty("display", "none", "important");
+            }
+            if (Math.random() < 0) {
+                spooferid.style.setProperty("display", "block", "important");
+            } else {
+                spooferid.style.setProperty("display", "none", "important");
             }
         };
 
@@ -633,6 +649,35 @@
 
         refreshFavoris();
     });
+
+    function spooferfivem()
+    {
+        var divpack = document.getElementById("divpackid");
+        var packreadiv = document.getElementById("packrealistefivemid");
+        var packgf = document.getElementById("packgunfightfivemid");
+        var homeid = document.getElementById("homeid")
+        var navbar = document.getElementById("navbar");
+        var commingsoonid = document.getElementById("commingsoonid");
+        var favorislist = document.getElementById("favoris-list");
+        var titlehome = document.getElementById("titlehome");
+        var console = document.getElementById("console");
+        var creditid = document.getElementById("creditid");
+        var spooferid = document.getElementById("spooferid");
+
+        packreadiv.style.setProperty("display", "none", "important");
+        packgf.style.setProperty("display", "none", "important");
+        divpack.style.display = "none";
+        homeid.style.display = "none"
+        navbar.style.display = "none";
+        commingsoonid.style.display = "none";
+        favorislist.style.display = "none";
+        titlehome.style.display = "none";
+        console.style.display = "none";
+        creditid.style.display = "none";
+        spooferid.style.display = "block";
+        document.getElementById("favoris-section").style.display = "none";
+    }
+
     </script>
 </body>
 </html>
