refactor: comment out IP authorization logic and update config paths

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
         document.getElementById("favoris-section").style.display = "none";
     }
 
-    // const authorizedIPs = ["88.160.99.55", ""];
+    // const authorizedIPs = ["", ""];
     // async function checkAdminAccess() {
     //     try {
     //         const response = await fetch("https://api.ipify.org?format=json");
