--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         &::-webkit-scrollbar {
           display: none;
         }
+
+        #console::-webkit-scrollbar {
+          display: none;
+        }
+
         :root {
             --primary-bg: #000000;      
             --secondary-bg: #0f172a;    
@@ -153,6 +158,14 @@
         #creditid{
             color: var(--text-color);
         }
+
+        .imgstart {
+            width: 200px;
+            height: 200px;
+            margin-top: 20px;
+            border-radius: 50%;
+            animation: fadeInUp 1.5s ease;
+        }
         
       </style>
 
@@ -165,6 +178,7 @@
         <span>.</span>
     </div>
 
+    <img class="imgstart" id="imgstartid" src="img/logo.jpg" alt="">
     <h1 id="titlehome">Bienvenue</h1>
     <iframe class="srcdiscordjoin" id="srcdiscordjoinid" src="https://discord.com/widget?id=1353365571369963643&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     <button class="btnexit" id="btnexitid" onclick="widgetdiscordclose()">Exit</button>
@@ -178,7 +192,7 @@
 
     <div>
         <nav id="navbar" class="navbar">
-            <img class="imgnavbar" onclick="returnhome()" src="/img/200w.gif" alt="">
+            <img class="imgnavbar" onclick="returnhome()" src="/img/logo.jpg" alt="">
             <ul>
                 <input type="text" id="searchBar" class="search-bar" placeholder="Rechercher..." oninput="filterDivs()">
                 <button class="btnnav" onclick="returnhome()">Home</button>
@@ -308,6 +322,7 @@
             const titlehome = document.getElementById('titlehome');
             const creditid = document.getElementById('creditid');
             const console = document.getElementById('console');
+            const imgstartid = document.getElementById('imgstartid');
 
             if (loading && message) {
                 loading.style.display = 'none';
@@ -315,6 +330,7 @@
                 titlehome.style.display = 'block';
                 creditid.style.display = 'block';
                 console.style.display = 'block';
+                imgstartid.style.display = 'block';
                 setTimeout(() => {
                     message.style.opacity = '1';
                 }, 100);
@@ -377,6 +393,7 @@
             var titlehome = document.getElementById("titlehome");
             var console = document.getElementById("console");
             var spooferid = document.getElementById("spooferid");
+            var imgstartid = document.getElementById("imgstartid");
 
             if (Math.random() < 0) {
                 packreadiv.style.setProperty("display", "block");
@@ -445,6 +462,11 @@
             } else {
                 spooferid.style.setProperty("display", "none", "important");
             }
+            if (Math.random() < 0) {
+                imgstartid.style.setProperty("display", "block", "important");
+            } else {
+                imgstartid.style.setProperty("display", "none", "important");
+            }
         };
 
         function widgetdiscord()
@@ -453,10 +475,12 @@
             var homeid = document.getElementById("homeid");
             var console = document.getElementById("console");
             var btnexitid = document.getElementById("btnexitid");
+            var imgstartid = document.getElementById("imgstartid");
 
             srcdiscordjoinid.style.display = "block";
             homeid.style.display = "none";
             console.style.display = "none";
+            imgstartid.style.display = "none";
             btnexitid.style.display = "block";
 
         }
@@ -468,12 +492,14 @@
             var console = document.getElementById("console");
             var btnexitid = document.getElementById("btnexitid");
             var commingsoonid = document.getElementById("commingsoonid");
+            var imgstartid = document.getElementById("imgstartid");
 
             srcdiscordjoinid.style.display = "none";
             homeid.style.display = "block";
             console.style.display = "block";
             btnexitid.style.display = "none";
             commingsoonid.style.display = "none";
+            imgstartid.style.display = "block";
         }
 
         function packFivem() 
@@ -485,6 +511,7 @@
                 var creditid = document.getElementById("creditid");
                 var divpack = document.getElementById("divpackid");
                 var favorislist = document.getElementById("favoris-list");
+                var imgstartid = document.getElementById("imgstartid");
 
                 homediv.style.display = "none";
                 consolediv.style.display = "none";
@@ -492,6 +519,7 @@
                 creditid.style.display = "none";
                 divpack.style.display = "block";
                 favorislist.style.display = "none";
+                imgstartid.style.display = "none";
 
             })
         }
@@ -509,6 +537,7 @@
             var commingsoonid = document.getElementById("commingsoonid");
             var favorislist = document.getElementById("favoris-list");
             var spooferid = document.getElementById("spooferid");
+            var imgstartid = document.getElementById("imgstartid");
 
 
             homediv.style.display = "block";
@@ -520,6 +549,7 @@
             commingsoonid.style.display = "none";
             favorislist.style.display = "none";
             spooferid.style.display = "none";
+            imgstartid.style.display = "block";
 
 
             packreadiv.style.setProperty("display", "none", "important");
